[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mj_maniPlan"
version = "0.0.1"
dependencies = [
  "mink",
  "mujoco >= 3",
  "numpy",
  "ruckig",
]
# TODO (#28): change to 3.9 if project supports it
requires-python = ">=3.10"
authors = [
  { name="Ashton Larkin", email="" },
]
maintainers = [
  { name="Ashton Larkin", email="" },
]
description = "Manipulator motion planning in MuJoCo"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["robotics", "motion", "planning", "manipulation", "mujoco"]
classifiers = [
  "Framework :: Robot Framework :: Library",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "black",
  "pre-commit",
  "ruff",
]
test = [
  "pytest",
  "robot_descriptions",
]
all = [
  "mj_maniplan[dev,test]"
]

[project.urls]
Homepage = "https://github.com/adlarkin/mj_maniPlan"

[tool.ruff]
# TODO (#28): change to 3.9 (py39) if project supports it
target-version = "py310"

[tool.ruff.lint]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I"
]
ignore = [
  # Line too long.
  "E501"
]
