[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mjpl"
version = "0.0.1"
dependencies = [
  "mink",
  "mujoco >= 3",
  "numpy",
  "ruckig",
  "scipy",
]
requires-python = ">=3.10"
authors = [
  { name="Ashton Larkin", email="" },
]
maintainers = [
  { name="Ashton Larkin", email="" },
]
description = "MuJoCo motion planning library."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["robotics", "motion", "planning", "manipulation", "mujoco"]
classifiers = [
  "Framework :: Robot Framework :: Library",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
  "robot_descriptions",
]
dev = [
  "black",
  "mjpl[test]",
  "pre-commit",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/adlarkin/mjpl"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I"
]
ignore = [
  # Line too long.
  "E501"
]
